feat: update documentation api order
