# src/docs/swagger_output.json
@@ -442,12 +442,7 @@
           "default": {
             "description": ""
           }
-        },
-        "security": [
-          {
-            "bearerAuth": ""
-          }
-        ]
+        }
       }
     },
     "/banners": {
